--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,30 @@
-requests~=2.26.0
-flask~=2.0.2
+appnope==0.1.2
+argcomplete==1.12.3
+backcall==0.2.0
+certifi==2020.6.20
+charset-normalizer==2.0.9
+click==8.0.3
+decorator==5.1.0
+Flask==2.0.2
+greenlet==1.1.2
+idna==3.3
+ipython==7.30.1
+itsdangerous==2.0.1
+jedi==0.18.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.24
+psycopg2==2.9.2
+ptyprocess==0.7.0
+Pygments==2.10.0
+pyperclip==1.8.2
+requests==2.26.0
 SQLAlchemy==1.4.29
+traitlets==5.1.1
+urllib3==1.26.7
+wcwidth==0.2.5
+Werkzeug==2.0.2
